<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="123dp"
                android:layout_marginLeft="123dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="134dp"
                android:layout_marginRight="134dp"
                android:layout_marginBottom="23dp"
                android:text="Pendaftaran"
                android:textColor="@color/black"
                android:textSize="12pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/NamaUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/column"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="30px"
                android:hint="@string/Mnama" />

            <EditText
                android:id="@+id/AlamatUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/column"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="30px"
                android:hint="@string/Malamat" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="260dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="-63dp"
                android:text="@string/Jperempuan"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="-20dp"
                android:text="@string/Jlaki"
                android:textColor="@color/black"
                 />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:text="Jenis Kelamin :"
                android:textColor="@color/black"
                 />

            <EditText
                android:id="@+id/EmailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/column"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="30px"
                android:hint="@string/Memail" />

            <EditText
                android:id="@+id/PasswordUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/column"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="30px"
                android:hint="@string/Mpass" />

            <EditText
                android:id="@+id/RepasswordUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/column"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="30px"
                android:hint="@string/MRepass" />

            <ImageButton
                android:id="@+id/batalButtom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/batal" />

            <ImageButton
                android:id="@+id/daftarButtom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="600px"
                android:layout_marginTop="-73dp"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/daftar" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>